fix the designer line overflow on small screen devices.

--- a/style.css
+++ b/style.css
@@ -479,8 +479,6 @@ footer {
 .copyright-container {
   display: flex;
   background-color: var(--my-brown-color);
-  /* background-color: blue; */
-  height: 24px;
   justify-content: center;
 }
 .designer-line {
@@ -493,15 +491,14 @@ footer {
 .designer-line span {
   color: #f9f8f6;
   font-size: 1rem;
+  text-align: center;
   line-height: 0;
-  margin-top: 4px;
+  margin-top: 8px;
 }
-.designer-line p:hover {
-  color: var(--my-brown-color);
-  cursor: crosshair;
+#designer-email:hover {
+  color: black;
 }
-.designer-line p:hover span{
-font-size: 1.5rem;}
+
 .facebook {
   color: #1778f2;
 }
@@ -690,6 +687,7 @@ font-size: 1.5rem;}
   .designer-line span {
     font-size: 1rem;
   }
+
   footer:hover::after {
     font-size: 1rem;
     right: 10px;
